--- a/public/lang/game_en.html
+++ b/public/lang/game_en.html
@@ -76,8 +76,8 @@
 								<div class="bottom-bar">
 									<div class="bottom-content">
 										<div id="textGuess" class="text-guess blink">***</div>
-										<div class="text-caption">💬 Comment <span class="text-bold">/say</span> <i>`your text`</i></div>
-										<div class="text-caption" style="margin-bottom: 0rem;">🙋‍♀️🙋‍♂️ Guess the word above for print your profile picture</div>
+										<div class="text-caption">💬 Comente <span class="text-bold">/diga</span> <i>`seu texto`</i></div>
+										<div class="text-caption" style="margin-bottom: 0rem;">🙋‍♀️🙋‍♂️ Adivinhe a palavra acima para imprimir sua foto de perfil </div>
 									</div>
 								</div>
 							</td>
