--- a/public/lang/game_en.html
+++ b/public/lang/game_en.html
@@ -77,7 +77,7 @@
 									<div class="bottom-content">
 										<div id="textGuess" class="text-guess blink">***</div>
 										<div class="text-caption">💬 Comment <span class="text-bold">/say</span> <i>`your text`</i></div>
-										<div class="text-caption" style="margin-bottom: 0rem;">🙋‍♀️🙋‍♂️ Guess the word above for print your profile picture</div>
+										<div class="text-caption" style="margin-bottom: 0rem;">🙋‍♀️🙋‍♂️ adivinhe a palavra para aparecer sua foto</div>
 									</div>
 								</div>
 							</td>
